--- a/ProyectoWebEncuestas/Views/Encuestador/AgregarEncuesta.cshtml
+++ b/ProyectoWebEncuestas/Views/Encuestador/AgregarEncuesta.cshtml
@@ -27,7 +27,7 @@
      let questionCount = 1;
       function addQuestion() {
         if (questionCount >= 10) {
-          alert("Solo se permiten hasta 10 preguntas.");
+          alert("Solo se permiten de 1 a 10 preguntas.");
           return;
         }
         questionCount++;
